k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rdicidr-service
  namespace: production
spec:
  type: ClusterIP
  selector:
    app: rdicidr
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
